# mediatap

./: Cargo.toml  Cross.toml  Dockerfile  README.md
migrations/2021-01-06-210215_initial/: down.sql  up.sql
src/: config.rs  consts.rs  input_data.rs  main.rs  models.rs  paths.rs  schema.rs  subscriptions.rs  url_util.rs
