[package]
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
edition = "2018"
name = "mediatap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
diesel = {version = "1.4", features = ["sqlite", "chrono"]}
diesel_migrations = "1.4.0"
directories = "3.0.1"
json_minimal = "0.1.3"
xz2 = "0.1.6"
reqwest = { version = "0.11.0", features = ["blocking"]}
