[package]
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
edition = "2018"
homepage = "https://github.com/sphinxc0re/mediatap"
name = "mediatap"
repository = "https://github.com/sphinxc0re/mediatap"
version = "0.1.0"

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
diesel = {version = "1.4", features = ["sqlite", "chrono"]}
diesel_migrations = "1.4.0"
directories = "3.0.1"
human-panic = "1.0.3"
json_minimal = "0.1.3"
reqwest = {version = "0.11.0", features = ["blocking"]}
serde = {version = "1.0.123", features = ["derive"]}
xz2 = "0.1.6"
