[package]
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
description = "A CLI for automating German public-broadcasting TV-show subscriptions"
edition = "2018"
homepage = "https://github.com/sphinxc0re/mediatap"
license = "GPL-3.0-only"
name = "mediatap"
repository = "https://github.com/sphinxc0re/mediatap"
version = "0.1.0"

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
dialoguer = "0.7.1"
diesel = {version = "1.4", features = ["sqlite", "chrono"]}
diesel_migrations = "1.4.0"
directories = "3.0.1"
futures = "0.3.12"
human-panic = "1.0.3"
json_minimal = "0.1.3"
reqwest = {version = "0.11.0", default-features = false, features = ["blocking", "rustls-tls"]}
serde = {version = "1.0.123", features = ["derive"]}
tokio = {version = "1.2.0"}
toml = "0.5.8"
xz2 = "0.1.6"
